# rtuyg

./: meson.build
res/img/: box.aseprite  character.aseprite  spikes.aseprite
res/lvl/: lvl1.txt
src/: main.cpp
